Integrate Data Mart for version 0.3.0 (#80)
* interim commit

* Bumped version of sz-sdk-java-grpc to 0.3

* Interim commit to fix build issues

* Fixed linting issues and tweaked Dockerfile

* Fixed spelling errors

* Updated data-mart-replicator dependency to 2.0.0-beta.1.1 to handle illegal Windows path URI's for Sqlite which the engine allows

* Renamed constants for server address from 'bind address'

* Added fixes for command-line start of server JAR file

* Fixed bearer warning

* Fixed unused import