@@ -19,6 +19,8 @@ import com.senzing.cmdline.CommandLineUtilities;
 import com.senzing.cmdline.CommandLineValue;
 import com.senzing.cmdline.DeprecatedOptionWarning;
 import com.senzing.cmdline.ParameterProcessor;
+import com.senzing.datamart.ProcessingRate;
+import com.senzing.datamart.SzReplicatorOption;
 import com.senzing.util.JsonUtilities;
 
 import static com.senzing.sdk.grpc.server.SzGrpcServerConstants.*;
@@ -110,7 +112,7 @@ public enum SzGrpcServerOption
      * <code>SENZING_TOOLS_SERVER_ADDRESS="{ip-address|loopback|all}"</code></li>
      * </ul>
      */
-    BIND_ADDRESS("--server-address", ENV_PREFIX + "SERVER_ADDRESS",
+    BIND_ADDRESS("--bind-address", ENV_PREFIX + "BIND_ADDRESS",
                    1, DEFAULT_BIND_ADDRESS_PARAM),
 
     /**
@@ -316,8 +318,75 @@ public enum SzGrpcServerOption
      */
     SKIP_ENGINE_PRIMING("--skip-engine-priming",
                         ENV_PREFIX + "SKIP_ENGINE_PRIMING",
-                        0, "false");
+                        0, "false"),
 
+    /**
+     * This option is used to specify the database connection for the data mart,
+     * if omitted then the data mart will <b>NOT</b> enabled.  If provided, then
+     * the single parameter to this option is the SQLite or PostgreSQL database
+     * URL specifying the database connection.  Possible database URL formats are:
+     * <ul>
+     *   <li><code>{@value com.senzing.datamart.PostgreSqlUri#SUPPORTED_FORMAT_1}</code></li>
+     *   <li><code>{@value com.senzing.datamart.PostgreSqlUri#SUPPORTED_FORMAT_2}</code></li>
+     *   <li><code>{@value com.senzing.datamart.SqliteUri#SUPPORTED_FORMAT_1}</code></li>
+     *   <li><code>{@value com.senzing.datamart.SqliteUri#SUPPORTED_FORMAT_2}</code></li>
+     *   <li><code>{@value com.senzing.datamart.SqliteUri#SUPPORTED_FORMAT_3}</code></li>
+     * </ul>
+     * <b>NOTE:</b> The PostgreSQL or SQLite URI can also be obtained from the 
+     * {@link #CORE_SETTINGS} by using a special URI in the following format:
+     * <ul>
+     *   <li><code>{@value com.senzing.datamart.SzCoreSettingsUri#SUPPORTED_FORMAT}</code></li>
+     * </ul>
+     * For example,
+     * <code>{@value com.senzing.datamart.SzReplicatorConstants#DEFAULT_CORE_SETTINGS_DATABASE_URI}</code>
+     * will obtain the primary SQL connection from the {@linkplain #CORE_SETTINGS
+     * Senzing Core SDK settings}.
+     * <b>NOTE:</b> The PostgreSQL or SQLite URI can also be obtained from the 
+     * {@link #CORE_SETTINGS} by using a special URI in the following format:
+     * <p>
+     * This option can be specified in the following ways:
+     * <ul>
+     * <li>Command Line: <code>--data-mart-uri {url}</code></li>
+     * <li>Environment:
+     * <code>SENZING_TOOLS_DATA_MART_DATABASE_URI="{url}"</code></li>
+     * </ul>
+     */
+    DATA_MART_URI("--data-mart-uri",
+                 ENV_PREFIX + "DATA_MART_DATABASE_URI",
+                 null, 1),
+
+    /**
+     * <p>
+     * Use this option to balance the data mart message consumption and processing
+     * between aggressively keeping the data mart closely in sync with the entity
+     * repository and less frequent batch processing to conserve system resources.
+     * The value to this option is one of the following:
+     * <ul>
+     * <li><code>leisurely</code> -- This setting allows for longer gaps between 
+     * updating the data mart, favoring less frequent batch processing in order to
+     * conserve system resources.</li>
+     * 
+     * <li><code>standard</code> -- This is the default and is balance between 
+     * conserving system resources and keeping the data mart updated in a reasonably
+     * timely manner.</li>
+     * 
+     * <li><code>aggressive</code> -- This setting uses more system resources to 
+     * aggressively consume and process incoming messages to keep the data mart closely
+     * in sync with the least time delay.</li>
+     * 
+     * </ul>
+     * <p>
+     * This option can be specified in the following ways:
+     * <ul>
+     * <li>Command Line:
+     * <code>--processing-rate {leisurely|standard|aggressive}</code></li>
+     * <li>Environment:
+     * <code>SENZING_TOOLS_REFRESH_CONFIG_SECONDS="{integer}"</code></li>
+     * </ul>
+     */
+    DATA_MART_RATE("--data-mart-rate", ENV_PREFIX + "PROCESSING_RATE", null,
+                    1, ProcessingRate.STANDARD.toString().toLowerCase());
+    
     /**
      * The {@link Map} of {@link SzGrpcServerOption} keys to unmodifiable
      * {@link Set} values containing the {@link SzGrpcServerOption} values that
@@ -395,23 +464,6 @@ public enum SzGrpcServerOption
      */
     private List<String> defaultParameters;
 
-    /**
-     * The group name for the option group that this parameter belongs to.
-     */
-    private String groupName;
-
-    /**
-     * The property key to map the option to for the group for initializing a
-     * sub-object with the options in that group.
-     */
-    private String groupPropertyKey;
-
-    /**
-     * The property indicating if the option is not required for the validity of
-     * the group to which it belongs.
-     */
-    private boolean groupOptional;
-
     SzGrpcServerOption(
             String cmdLineFlag,
             Set<String> synonymFlags,
@@ -425,10 +477,7 @@ public enum SzGrpcServerOption
              primary,
              parameterCount,
              Collections.emptyList(),
-             false,
-             null,
-             null,
-             true);
+             false);
     }
     
     SzGrpcServerOption(
@@ -444,10 +493,7 @@ public enum SzGrpcServerOption
              false,
              parameterCount,
              List.of(defaultParams),
-             false,
-             null,
-             null,
-             true);
+             false);
     }
 
     SzGrpcServerOption(
@@ -464,10 +510,7 @@ public enum SzGrpcServerOption
              false,
              parameterCount,
              List.of(defaultParams),
-             false,
-             null,
-             null,
-             true);
+             false);
     }
 
     SzGrpcServerOption(String cmdLineFlag,
@@ -483,10 +526,7 @@ public enum SzGrpcServerOption
              parameterCount < 0 ? 0 : parameterCount,
              parameterCount,
              Collections.emptyList(),
-             false,
-             null,
-             null,
-            true);
+             false);
     }
 
     SzGrpcServerOption(
@@ -497,10 +537,7 @@ public enum SzGrpcServerOption
             boolean         primary,
             int             parameterCount,
             List<String>    defaultParameters,
-            boolean         deprecated,
-            String          groupName,
-            String          groupPropertyKey,
-            boolean         groupOptional) 
+            boolean         deprecated) 
     {
         this(cmdLineFlag, 
              synonymFlags,
@@ -510,10 +547,7 @@ public enum SzGrpcServerOption
              parameterCount,
              parameterCount,
              defaultParameters,
-             deprecated,
-             groupName,
-             groupPropertyKey,
-             groupOptional);
+             deprecated);
     }
 
     SzGrpcServerOption(
@@ -525,10 +559,7 @@ public enum SzGrpcServerOption
             int             minParameterCount,
             int             maxParameterCount,
             List<String>    defaultParameters,
-            boolean         deprecated,
-            String          groupName,
-            String          groupPropertyKey,
-            boolean         groupOptional) 
+            boolean         deprecated) 
     {
         this.cmdLineFlag = cmdLineFlag;
         this.synonymFlags = Set.copyOf(synonymFlags);
@@ -537,9 +568,6 @@ public enum SzGrpcServerOption
         this.minParamCount = minParameterCount;
         this.maxParamCount = maxParameterCount;
         this.deprecated = deprecated;
-        this.groupName = groupName;
-        this.groupPropertyKey = groupPropertyKey;
-        this.groupOptional = groupOptional;
         this.envFallbacks = (envFallbacks == null)
                 ? Collections.emptyList()
                 : List.copyOf(envFallbacks);
@@ -623,42 +651,6 @@ public enum SzGrpcServerOption
     }
 
     /**
-     * Gets the group name (identifier) if this option is 
-     * grouped with other options.
-     * 
-     * @return The group name (identifier) for this option,
-     *         or <code>null</code> if this option does not
-     *         belong to a group.
-     */
-    public String getGroupName() {
-        return this.groupName;
-    }
-
-    /**
-     * The key under which the option value is stored in the
-     * option group's {@link Map} of properties.
-     * 
-     * @return The key under which the option value is stored
-     *         in the option group's {@link Map} of properties.
-     */
-    public String getGroupPropertyKey() {
-        return this.groupPropertyKey;
-    }
-
-    /**
-     * Checks if this option is optional for the group.  These 
-     * options will still trigger the required options for the
-     * group to specified, but are not required if one of the
-     * required options for the group is specified.
-     * 
-     * @return <code>true</code> if the option is optional for 
-     *         for the group, otherwise <code>false</code>.
-     */
-    public boolean isGroupOptional() {
-        return this.groupOptional;
-    }
-
-    /**
      * {@inheritDoc}
      */
     @Override
@@ -729,43 +721,7 @@ public enum SzGrpcServerOption
 
             Map<SzGrpcServerOption, Set<Set<CommandLineOption>>> dependencyMap = new LinkedHashMap<>();
 
-            // handle dependencies for groups of options that go together
-            Map<String, Set<SzGrpcServerOption>> groups = new LinkedHashMap<>();
-            for (SzGrpcServerOption option : SzGrpcServerOption.values()) {
-                String groupName = option.getGroupName();
-                if (groupName == null) {
-                    continue;
-                }
-                Set<SzGrpcServerOption> set = groups.get(groupName);
-                if (set == null) {
-                    set = new LinkedHashSet<>();
-                    groups.put(groupName, set);
-                }
-                set.add(option);
-            }
-
-            // create the dependencies using the groupings
-            groups.forEach((groupName, group) -> {
-                for (SzGrpcServerOption option : group) {
-                    Set<CommandLineOption> others = new LinkedHashSet<>(group);
-
-                    // remove self from the group (can't depend on itself)
-                    others.remove(option);
-
-                    // remove any options that are not required
-                    for (SzGrpcServerOption opt : group) {
-                        if (opt.isGroupOptional()) {
-                            others.remove(opt);
-                        }
-                    }
-
-                    // make the others set unmodifiable
-                    others = Collections.unmodifiableSet(others);
-
-                    // add the dependency
-                    dependencyMap.put(option, Set.of(others));
-                }
-            });
+            dependencyMap.put(DATA_MART_RATE, Set.of(Set.of(DATA_MART_URI)));
 
             CONFLICTING_OPTIONS = recursivelyUnmodifiableMap(conflictMap);
             ALTERNATIVE_OPTIONS = recursivelyUnmodifiableMap(altMap);
@@ -897,10 +853,10 @@ public enum SzGrpcServerOption
                     switch (paramVal) {
                         case "verbose":
                         case "1":
-                            return true;
+                            return 1;
                         case "muted":
                         case "0":
-                            return false;
+                            return 0;
                         default:
                             throw new IllegalArgumentException(
                                 "The specified core log level is not recognized; " + paramVal);
@@ -948,6 +904,12 @@ public enum SzGrpcServerOption
                     }
                     return statsInterval;
                 }
+
+                case DATA_MART_URI:
+                    return SzReplicatorOption.parseDatabaseUri(params.get(0));
+
+                case DATA_MART_RATE:
+                    return SzReplicatorOption.parseProcessingRate(params.get(0));
 
                 case SKIP_STARTUP_PERF:
                 case SKIP_ENGINE_PRIMING:
@@ -1023,5 +985,15 @@ public enum SzGrpcServerOption
                 optionValues, null, jsonBuilder, null);
         
         return processedValues;
+    }
+
+    static {
+        // force load the SzReplicatorOption class to ensure
+        // the supported derivations of ConnectionUri are registered
+        try {
+            Class.forName(SzReplicatorOption.class.getName());
+        } catch (ClassNotFoundException ignore) {
+            // do nothing
+        }
     }
 }
